# NEMESIS

./: .gitignore  README.md  pyproject.toml  setup.py
analysis/: CDS sensitivity analysis extended.ipynb  CDS sensitivity analysis.ipynb  implied spread.xlsx
devlib/models/: bachelier.py
devlib/utils/: calendar_utils.py  cds_utils.py  curve_utils.py  fx_utils.py  ql_calendar_utils.py  ql_date_utils.py  ql_utils.py  utils.py
nemesis/: __init__.py
nemesis/docs/: american.md  pricing.md
nemesis/models/: black.py  black_analytic.py
nemesis/utils/: README.md  __init__.py  calendar.py  date.py  date_helper.py  day_count.py  error.py  frequency.py  fx_helper.py  global_types.py  global_vars.py  helpers.py  math.py  ql_helper.py  rate_helper.py  schedule.py  tenor.py
unit_test/: BBSW3M.ipynb  CDS curve.ipynb  CDS index curve.ipynb  CDS sensitivity analysis.ipynb  CDS valuation.ipynb  CDS.ipynb  CNYUSD ccs curve.ipynb  CNYUSD ccs.py  FR007.ipynb  FX curve & surface.ipynb  FX forward curve.ipynb  effr curve -FI.ipynb  effr curve.ipynb  effr irs.py  future trs.ipynb  pm_option.ipynb  sofr irs -FI.ipynb  sofr irs 20241127.ipynb  termsofr12m.py  termsofr1m.ipynb  termsofr1m.py  termsofr3m.py  termsofr6m.py
unit_test/data/: ICVS530_curve_data_20241101.xlsx  ICVS531_curve_data_20241101.xlsx  USDCNY_ccs_curve_data_20240805.xlsx  USDCNY_curve_data_20240325.xlsx  USDCNY_vol_data_20240325.xlsx  XAUUSD_voldata_20250811.xlsx  bbsw3m_curve_basis_data_20260313.xlsx  bbsw3m_curve_data_20260313.xlsx  credit_curve_data_20241101.xlsx  effr_curve_data_20241217.xlsx  (+12 more)
(+103 files in other folders)
